# VLPIM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXTERNAL_TOOLS_POLICY.md  INSTALLATION_GUIDE.md  LICENSE  Makefile  README.md  environment.yml  fix_commit_message.sh  pyproject.toml  requirements.txt  setup.py
config/: config_unified.yaml
docs/: ENVIRONMENT_FILES.md  VLPIM_pipeline_report.md
docs/chinese_docs/: HOW_TO_CALL_REAL_TOOLS.md  IMPROVEMENTS_SUMMARY.md  PATH_CONFIGURATION_GUIDE.md  README.md  REAL_IMPLEMENTATION_GUIDE.md  VLPIM_PARAMETERS.md  linux_usage_guide.md
examples/: example_epitopes.csv  example_usage.py  protein.fasta
scripts/: install_environment.sh  quick_start.sh  validate_config.py
src/vlpim/: __init__.py  epitope_analyzer.py  immunogenicity_optimization_pipeline.py  vlpim.py
src/vlpim/tools/: __init__.py  alphafold3_wrapper.py  config_loader.py  epitope_predictor.py  netmhcii_analyzer.py  netmhcii_runner.py  path_config.py  protein_mpnn_wrapper.py  rosetta_wrapper.py
tests/: test_interface_analysis.py  test_pipeline.py
