[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vlpim"
version = "1.0.0"
description = "A comprehensive tool for immunogenicity modulation of virus-like particles"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Chufan Wang", email = "wcf1112@sjtu.edu.cn"}
]
maintainers = [
    {name = "Chufan Wang", email = "wcf1112@sjtu.edu.cn"}
]
keywords = ["bioinformatics", "immunogenicity", "protein", "epitope", "MHC", "structure prediction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "pyyaml>=6.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.64.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]

[project.scripts]
vlpim = "vlpim.vlpim:main"

[project.urls]
Homepage = "https://github.com/RuijinHospitalVNAR/VLPIM"
Repository = "https://github.com/RuijinHospitalVNAR/VLPIM"
Documentation = "https://github.com/RuijinHospitalVNAR/VLPIM#readme"
"Bug Tracker" = "https://github.com/RuijinHospitalVNAR/VLPIM/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vlpim*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yml", "*.yaml", "*.md"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
